--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header con logo e sfondo in background -->
     <header>
         <img class="logo" src="img/logo.svg">
     </header>
 
-    <main>
+    <!-- Main con tutta la sezione -->
+    <main class="content">
+        <!-- Titolo -->
+        <section class="article-title">
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <h3><span class="grey-word">Scritto da </span><span class="blue-word">The Booleaner</span></h3>
+            <h4 class="grey-word">il 10/10/2020</h4>
+        </section>
 
     </main>
 
