Creazione classe "Foto"

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
             <h4 class="grey-word">il 10/10/2020</h4>
         </section>
 
+        <section class="photos">
+            <img src="img/tim-1.jpg">
+            <img src="img/tim-2.jpg">
+            <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke</h4>
+        </section>
+
     </main>
 
     <footer>
