--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke</h4>
         </section>
 
+        <!-- Paragrafo 1 -->
+        <div class="paragraph-1">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
+        </div>
+
     </main>
 
     <footer>
