--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
         </div>
 
+        <!-- Lista -->
+        <div class="list">
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore possimus cum tempore quos laborum! Voluptates recusandae laudantium quo deleniti assumenda tempora quidem, ea iusto iure architecto non unde ipsam doloribus?</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non repellendus harum tempora voluptatem sunt rem consequuntur eligendi officiis? Placeat, distinctio fugiat velit nulla excepturi adipisci. Adipisci in id neque asperiores.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, officia et. Sint, animi at quo eos, exercitationem, beatae distinctio hic quis dolorum ducimus quisquam nostrum aliquid repudiandae. Quam, veritatis esse.</li>
+        </div>
     </main>
 
     <footer>
