--- a/index.html
+++ b/index.html
@@ -39,6 +39,39 @@
             <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non repellendus harum tempora voluptatem sunt rem consequuntur eligendi officiis? Placeat, distinctio fugiat velit nulla excepturi adipisci. Adipisci in id neque asperiores.</li>
             <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, officia et. Sint, animi at quo eos, exercitationem, beatae distinctio hic quis dolorum ducimus quisquam nostrum aliquid repudiandae. Quam, veritatis esse.</li>
         </div>
+
+        <!-- Tabella -->
+        <div class="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr class="td-1">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab quisquam harum ea id amet dolor laudantium laborum nobis, veniam soluta non consequuntur. Officia harum totam magnam molestias architecto odit? Placeat.</td>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum natus libero nesciunt at perferendis distinctio sapiente excepturi a, quam veniam fuga vel officia veritatis, aspernatur consequuntur laboriosam provident blanditiis tempore!</td>
+                    </tr>
+
+                    <tr class="td-1">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque quod quia magnam voluptatem commodi, molestiae praesentium illum pariatur dolores quibusdam ipsa rerum consectetur. Labore quia iste ullam inventore facere sapiente!</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer>
