--- a/index.html
+++ b/index.html
@@ -61,21 +61,26 @@
                     <tr>
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum natus libero nesciunt at perferendis distinctio sapiente excepturi a, quam veniam fuga vel officia veritatis, aspernatur consequuntur laboriosam provident blanditiis tempore!</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab quisquam harum ea id amet dolor laudantium laborum nobis, veniam soluta non consequuntur. Officia harum totam magnam molestias architecto odit? Placeat.</td>
                     </tr>
 
                     <tr class="td-1">
                         <td>Lorem ipsum dolor</td>
                         <td>Lorem ipsum dolor</td>
-                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque quod quia magnam voluptatem commodi, molestiae praesentium illum pariatur dolores quibusdam ipsa rerum consectetur. Labore quia iste ullam inventore facere sapiente!</td>
+                        <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab quisquam harum ea id amet dolor laudantium laborum nobis, veniam soluta non consequuntur. Officia harum totam magnam molestias architecto odit? Placeat.</td>
                     </tr>
                 </tbody>
             </table>
         </div>
+
+        <!-- Paragrafo 2 -->
+        <div class="paragraph-2">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
+        </div>
     </main>
 
     <footer>
-
+        
     </footer>
 </body>
 </html>
