--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
     </main>
 
     <footer>
-        
+        <strong><span class="grey-word">Potrebbero interessarti</span></strong>
+        <section class="suggestion">
+            <div class="suggestion-1">
+                <h3>Lorem ipsum dolor</h3>
+            </div>
+            <div class="suggestion-2">
+                <h3>Lorem ipsum dolor</h3>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
