Ultime modifiche di layout e struttura

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Paragrafo 1 -->
         <div class="paragraph-1">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis <span class="yellow-marker">nobis animi voluptatem saepe nisi quia repellendus</span> libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
         </div>
 
         <!-- Lista -->
@@ -41,13 +41,13 @@
         </div>
 
         <!-- Tabella -->
-        <div class="table">
+        <div class="tab">
             <table>
                 <thead>
                     <tr>
                         <th>Lorem ipsum dolor</th>
                         <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
+                        <th class="th-exp">Lorem ipsum dolor</th>
                     </tr>
                 </thead>
 
@@ -75,7 +75,7 @@
 
         <!-- Paragrafo 2 -->
         <div class="paragraph-2">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero <span class="yellow-marker">consectetur cumque repellat facere sed rerum officia</span>, aut voluptatum.</p>
         </div>
     </main>
 
