Modifiche esercizio bonus

--- a/bonus/index2.html
+++ b/bonus/index2.html
@@ -5,43 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
 </head>
 <body>
     <!-- Header con logo e sfondo in background -->
     <header>
-        <img class="logo" src="img/logo.svg">
+        <img class="logo-2" src="img/logo.svg">
     </header>
 
     <!-- Main con tutta la sezione -->
     <main class="content">
         <!-- Titolo -->
-        <section class="article-title">
+        <section class="article-title bonus">
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <h3><span class="grey-word">Scritto da </span><span class="blue-word">The Booleaner</span></h3>
             <h4 class="grey-word">il 10/10/2020</h4>
         </section>
 
-        <section class="photos">
+        <section class="photos bonus">
             <img src="img/tim-1.jpg">
             <img src="img/tim-2.jpg">
             <h4>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd Photo: Wikimedia, by Paul Clarke</h4>
         </section>
 
         <!-- Paragrafo 1 -->
-        <div class="paragraph-1">
+        <div class="paragraph-1 bonus">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis <span class="yellow-marker">nobis animi voluptatem saepe nisi quia repellendus</span> libero consectetur cumque repellat facere sed rerum officia, aut voluptatum.</p>
         </div>
 
         <!-- Lista -->
-        <div class="list">
+        <div class="list bonus">
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore possimus cum tempore quos laborum! Voluptates recusandae laudantium quo deleniti assumenda tempora quidem, ea iusto iure architecto non unde ipsam doloribus?</li>
             <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non repellendus harum tempora voluptatem sunt rem consequuntur eligendi officiis? Placeat, distinctio fugiat velit nulla excepturi adipisci. Adipisci in id neque asperiores.</li>
             <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, officia et. Sint, animi at quo eos, exercitationem, beatae distinctio hic quis dolorum ducimus quisquam nostrum aliquid repudiandae. Quam, veritatis esse.</li>
         </div>
 
         <!-- Tabella -->
-        <div class="tab">
+        <div class="tab bonus">
             <table>
                 <thead>
                     <tr>
@@ -74,12 +74,12 @@
         </div>
 
         <!-- Paragrafo 2 -->
-        <div class="paragraph-2">
+        <div class="paragraph-2 bonus">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas aperiam unde corporis quis nobis animi voluptatem saepe nisi quia repellendus libero <span class="yellow-marker">consectetur cumque repellat facere sed rerum officia</span>, aut voluptatum.</p>
         </div>
     </main>
 
-    <footer>
+    <footer class="bonus">
         <strong><span class="grey-word">Potrebbero interessarti</span></strong>
         <section class="suggestion">
             <div class="suggestion-1">
